# psysmon

./: .gitignore  .nosetests_core.cfg  .nosetests_packages.cfg  MANIFEST.in  pyproject.toml  setup.cfg.template  setup.py  setupExt.py
doc/source/: conf.py  index.rst
doc/source/_ext/autosummary/: generate.py
doc/source/_static/: default.css  pdpHeader.xcf
doc/source/_templates/: layout.html
doc/source_doc/source/: conf.py
doc/user_doc/source/: conf.py  index.rst  intro.rst  packages.rst
lib/psysmon/: __init__.py  pSysmon.py
lib/psysmon/cec/: __init__.py  cecSubProcess.py
lib/psysmon/core/: __init__.py  base.py  cecSubProcess.py  clib_util.py  collectionExecutionControl.py  database_util.py  error.py  gui.py  guiBricks.py  gui_preference_dialog.py  gui_project_preferences.py  gui_util.py  gui_view.py  json_util.py  lib_signal.py  packageNodes.py  packageSystem.py  plugins.py  preferences_manager.py  processingStack.py  project.py  project_server.py  result.py  signal.py  test_util.py  util.py  waveclient.py  waveserver.py
lib/psysmon/gui/: __init__.py  bricks.py  context_menu.py  docking_frame.py  shortcut.py  unused.py  util.py  validator.py
lib/psysmon/progs/: __init__.py  clear_project_database_tables.py  psysmomat.py  psysmon.py  runtests.py
scripts/: clean_unittest_database.py  clear_project_database_tables.py  pSysmon.py  psysmomat  psysmon  remove_db_tables.py  remove_project.py  runtests.py
src/psysmon/: __init__.py  pSysmon.py
src/psysmon/core/: __init__.py  base.py  editDialog.py  gui.py  packageNodes.py  packageSystem.py  project.py  util.py
(+74 files in other folders)
